[package]
name = "hlp2rst"
version = "0.3.0"
edition = "2021"
description = "Convert Windows WinHelp (.hlp) files to reStructuredText"
license = "MIT"
repository = "https://github.com/barrendondo/winhelp2rst"

[dependencies]
winhelp = { path = "../winhelp" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
image = "0.25"
