[package]
name = "hlp2rst"
version = "1.0.0"
edition = "2021"
description = "Convert Windows WinHelp (.hlp) files to reStructuredText"
license = "MIT"
repository = "https://github.com/barrendondo/winhelp2rst"
readme = "../README.md"
keywords = ["winhelp", "hlp", "rst", "sphinx", "converter"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
winhelp = { path = "../winhelp" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
image = "0.25"
